--- a/album/src/index.css
+++ b/album/src/index.css
@@ -9,6 +9,7 @@ body,
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(15, 14, 27);
   color: #fff;
+  text-transform: capitalize;
 }
 
 code {
